created checkbox for filters(px)

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -77,31 +77,31 @@
         <h1 class="boardOneTitle">Categories</h1>
         <div class="ulBoard">
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='First Dish')}">
                     <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg">
                     First dishes
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Main Dish')}">
                     <img alt="Main-Dish" class="Main-Dish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >
                     Main dishes
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Salad')}">
                     <img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                     Salads
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Pastry')}">
                     <img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
                     Pastry
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Dessert')}">
                     <img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >
                     Desserts
                 </a>
@@ -113,95 +113,72 @@
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Fish Dish')}">
                     <img alt="Fish-Dish" class="Fish-Dish" th:src="@{images/Fish dish.svg}" src="../../static/images/Fish dish.svg" >
                     Fish dishes
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Snack')}">
                     <img alt="Snack" class="Snack" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
                     Snacks
                 </a>
             </div><hr>
             <div class="item">
-                <a th:href="@{/allRecipes(category=)}">
+                <a th:href="@{/allRecipes(category='Sauce')}">
                     <img alt="Sauce" class="Sauce" th:src="@{images/Sauce.svg}" src="../../static/images/Sauce.svg" >
                     Sauces
                 </a>
             </div><hr>
         </div>
-        <!--<div class="ul">
-            <ul>
-                <a th:href="@{/allRecipes(category=)}">
-                <li><img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >
-                    First dishes</li>
-                </a>
-                <hr>
-                <li><img alt="Main-Dish" class="MainDish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >
-                    Main dishes</li>
-                <hr>
-                <li><img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
-                    Salads</li>
-                <hr>
-                <li><img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
-                    Pastry</li>
-                <hr>
-                <li><img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >
-                    Desserts</li>
-                <hr>
-                <li><img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >
-                    Drinks</li>
-                <hr>
-                <li><img alt="Snack" class="Snack" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
-                    Snacks</li>
-                <hr>
-                <li><img alt="Fish-Dish" class="FishDish" th:src="@{images/Fish dish.svg}" src="../../static/images/Fish dish.svg" >
-                    Fish dishes</li>
-                <hr>
-                <li><img alt="Sauce" class="Sauce" th:src="@{images/Sauce.svg}" src="../../static/images/Sauce.svg" >
-                    Sauces</li>
-                <hr>
-            </ul>
-        </div>-->
         <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
     </div>
 
     <div class="main-bottom">
         <div class="dessert">
-            <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
-            <div class="rectangle rectangle-left-1">
-                <img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >Desserts
-            </div>
+            <a th:href="@{/allRecipes(category='Dessert')}">
+                <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
+                <div class="rectangle rectangle-left-1">
+                    <img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >Desserts
+                </div>
+            </a>
         </div>
 
         <div class="drink">
-            <img alt="fresh" class="fresh" th:src="@{images/drink.jpg}"  src="../../static/images/drink.jpg" >
-            <div class="rectangle rectangle-left-2">
-                <img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >Drinks
-            </div>
+            <a th:href="@{/allRecipes(category='Drink')}">
+                <img alt="fresh" class="fresh" th:src="@{images/drink.jpg}"  src="../../static/images/drink.jpg" >
+                <div class="rectangle rectangle-left-2">
+                    <img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >Drinks
+                </div>
+            </a>
         </div>
 
         <div class="salad">
-            <img alt="seafoodSalad" class="seafoodSalad" th:src="@{images/salad.jpg}" src="../../static/images/salad.jpg" >
-            <div class="rectangle rectangle-left-3">
-                <img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >Salads
-            </div>
+            <a th:href="@{/allRecipes(category='Salad')}">
+                <img alt="seafoodSalad" class="seafoodSalad" th:src="@{images/salad.jpg}" src="../../static/images/salad.jpg" >
+                <div class="rectangle rectangle-left-3">
+                    <img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >Salads
+                </div>
+            </a>
         </div>
     </div>
 
     <div class="firstD">
-        <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
-        <div class="rectangleFD rectangleFD-left">
-            <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >First dishes
-        </div>
+        <a th:href="@{/allRecipes(category='First Dish')}">
+            <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
+            <div class="rectangleFD rectangleFD-left">
+                <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >First dishes
+            </div>
+        </a>
     </div>
 
     <div class="mainD">
-        <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
-        <div class="rectangleMD rectangleMD-left">
-            <img alt="Main-Dish" class="Main-Dish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >Main dishes
-        </div>
+        <a th:href="@{/allRecipes(category='Main Dish')}">
+            <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
+            <div class="rectangleMD rectangleMD-left">
+                <img alt="Main-Dish" class="Main-Dish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >Main dishes
+            </div>
+        </a>
     </div>
 
 </div>
