--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -683,7 +683,7 @@ table td {
 .item a{
     color: black;
     display: block;
-    line-height: 40px;
+    line-height: 5.5vh;
 }
 
 .item a:hover{
@@ -704,6 +704,43 @@ table td {
     display: none;
 }
 
+.dish-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.dish-container input {
+    margin-right: 10px;
+    background: #733506;
+}
+.dish {
+    text-decoration: none;
+    color: black;
+}
+
+.dish-container input[type="checkbox"] {
+    display: none;
+}
+.dish-container label::before {
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #733506;
+    margin-right: 10px;
+    vertical-align: middle;
+    border-radius: 50%;
+}
+.dish-container input[type="checkbox"]:checked + label::before {
+    background-color: #733506;
+    border-color: #733506;
+    border-radius: 50%;
+}
+
+.dropdown {
+    margin-left: auto;
+}
+
 .sub-menu a{
     padding-left: 20px;
 }
@@ -712,10 +749,11 @@ table td {
     transform: rotate(180deg);
 }
 
-.ulBoard hr {
+hr {
     border: 0.104167vw solid black;
-    width: 10vw;
-    margin-right: 1vw;
+    width: 9.3vw;
+    margin-right: 0.5vw;
+    margin-left: 2vw;
 }
 
 
