--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -60,7 +60,6 @@ body {
     border: none;
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2vh;
     font-size: 2vw;
     border-radius: 5.5vh;
     outline: none;
@@ -82,7 +81,6 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vh;
     font-size: 1.25vw;
     text-decoration: none;
 }
@@ -159,44 +157,6 @@ body {
     margin-top: -63.5vh;
     z-index: 5;
 }
-
-.ul {
-    position: absolute;
-    top: 19vh;
-    height: 44vh;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.66667vw;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-left: 0.2605vw;
-    margin-top: 0.5vh;
-}
-
-ul {
-    padding-left: 0.2605vw;
-    margin-left: 0.521vw;
-}
-
-ul li {
-    list-style: none;
-    padding-left: 0.2605vw;
-    margin-left: 0.4vw;
-    margin-right: 0.7vw;
-}
-
-ul li:hover {
-    background-color: #F2B705;
-    border-radius: 5.5vw;
-    height: 5vh;
-    width: 9.3vw;
-}
-
-ul hr {
-    border: 0.104167vw solid black;
-    margin: 0.520834vw ;
-    margin-left: 0.5vw;
-    margin-right: 0.6vw;
-}
 /*____________________________________________________________________________________________________________________*/
 ::-webkit-scrollbar {
     width: 0.78125vw;
@@ -230,7 +190,7 @@ ul hr {
 
 .First-Dish{
     width: 2.65625vw;
-    height:5.5556vh;
+    height: 5.5556vh;
 }
 
 .Main-Dish{
@@ -344,13 +304,13 @@ a:link, a:visited {
     height: 6.0185185185vh;
     top: 84.5vh;
     margin-right: 2.344vw;
-    border-radius: 0vh 0vh 7.8vh 7.8vh;
+    border-radius: 0 0 7.8vh 7.8vh;
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 3.8888vh;
     font-size: 2.1875vw;
+    color: black;
 }
 
 .rectangle-left-1 {
@@ -383,14 +343,14 @@ a:link, a:visited {
     width: 43.69vw;
     top: 43vh;
     margin-right: 2.344vw;
-    border-radius: 0vh 0vh 7.8vh 7.8vh;
+    border-radius: 0 0 7.8vh 7.8vh;
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
     font-family: 'Frank Ruhl Libre', serif;
     left: 18.4375vw;
-    font-size: 3.8888vh;
     font-size: 2.1875vw;
+    color: black;
 }
 
 .firstD:hover .rectangleFD, .firstD:hover .firstDish {
@@ -404,13 +364,13 @@ a:link, a:visited {
     top: 83.70vh;
     left: 66.275vw;
     margin-right: 2.344vw;
-    border-radius: 0vh 0vh 7.8vh 7.8vh;
+    border-radius: 0 0 7.8vh 7.8vh;
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 3.8888vh;
     font-size: 2.1875vw;
+    color: black;
 }
 
 .mainD:hover .rectangleMD, .mainD:hover .mainDish {
@@ -554,8 +514,7 @@ a:link, a:visited {
     width: 8.4375vw;
     height: 4.2593vh;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 4.2593vh;
