--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -57,7 +57,7 @@
                 <input name="query" placeholder="Category" type="text">
             </div>
         </form>
-
+        <div class="ingredientsField">
         <form class="text-form-ingredients">
             <div class="recipeIngredients">
                 <input name="query" placeholder="Ingredients" type="text">
@@ -68,6 +68,7 @@
                 <input name="query" placeholder="Ingredients amount" type="text">
             </div>
         </form>
+        </div>
         <form class="text-form-devices">
             <div class="recipeDevices"></div>
                 <input name="query" placeholder="Recipe devices" type="text">
